# LangAlpha

./: .env  .env.example  .gitignore  Connect_to_db.ipynb  Polygon_code.ipndy  Polygon_code.ipynb  Polygon_code3.ipynb  README.md  app.py  docker-compose.yml  environment.yml  main.py  prd.md  pyproject.toml  requirements.txt
assets/: chinese_ev_company_report.md  example2.md  mag7_report.md  mag7_report_2.md  market_summary_april_23.md  nvdia_report.md  nvidia_two_month.md  nvidia_ytd.md  tarrif_and_trade_war.md  tesla_report.md
assets/raw_responses/: apr_25_market_overview.json  meta-set-up-2.json  meta-set-up.json  stock_overview.json  test.json  test2.json
assets/reports/: apr_25_market_overview.md  meta-set-up-2.md  meta-set-up.md  stock_overview.md  test.md  test2.md
data/: valuation_metrics.csv
data/Polygon_stock_price/:  Visa_Polygon3_V.csv  Netflix_Polygon3_NFLX.csv
data/compustat/: capital_structure_debt.csv  capital_structure_equity.csv  capital_structure_summary.csv  fundamentals_annual.csv  fundamentals_quarterly.csv  key_developments.csv  security_daily.csv
ginzu_tools/: ginzu_interface.ipynb
models/: fcffsimpleginzu.xlsx
notebooks/: Connect_to_db.ipynb  Gemini.ipynb  Polygon_code3.ipynb  WSJ_crawler.ipynb  checkpoint.ipynb  data_model_demo.ipynb  db_management.ipynb  earnings_transcripts.csv  financial_dataset.ipynb  financial_metric_demo.ipynb  get_data.ipynb  ginzu_interface.ipynb  langraph_pipeline_demo.ipynb  news_sentiment_demo.ipynb  outline_website.ipynb  polygon_test.ipynb  prophet_test.ipynb  retail_activity_demo.ipynb  sec_edgar.ipynb  sec_scraper.ipynb  seekingalpha_scraper.ipynb  stocksflags-ec5c40f2f2ee.json  test.ipynb  transcript_scraping.ipynb  ts_forecast.ipynb  wrds.ipynb  yF_API_call.ipynb  yahooquery.ipynb  yf.ipynb  yf_scraper.ipynb
notebooks/WSJ/: WSJ_crawler.ipynb  WSJ_scrape.ipynb  articlesWSJ.db  createDB.ipynb  dejump.ipynb
notebooks/checkpoint/: load_data.ipynb  milestone_3.ipynb  milestone_4.ipynb
notebooks/demo/: browser_use_demo.ipynb  financial_metric_demo.ipynb  news_sentiment_demo.ipynb  retail_activity_demo.ipynb  tickertick.ipynb  tickertick_mcp_demo.ipynb
notebooks/load_data/: db_management.ipynb  load_data.ipynb
notebooks/scrapers/: sec_scraper.ipynb
src/: LLM.py  connect_wrds.py  financialdatasets.py  ginzu_interface.py  ginzu_prototype.py  ploygon.py  sec_edgar.py  yF_API_call.ipynb  yahoo_finance.py
src/agent/market_intelligence_agent/: Troubleshooting_log.md  __init__.py  pyproject.toml
src/agent/market_intelligence_agent/agents/: __init__.py  agents.py  llm.py
src/agent/market_intelligence_agent/config/: __init__.py  agents.py  env.py
src/agent/market_intelligence_agent/graph/: builder.py  nodes.py  types.py
src/agent/market_intelligence_agent/prompts/: __init__.py  analyst.md  coder.md  coordinator.md  market.md  planner.md  reporter.md  researcher.md  supervisor.md  template.py
src/agent/market_intelligence_agent/service/: streaming_message.py  workflow_service.py  workflow_service_dev.py
src/agent/market_intelligence_agent/tools/: __init__.py  browser.py  code_tool.py  crawl.py  fundamental_data.py  fundamental_data_fmp.py  market_data.py  mcp_server.py  mcp_server_market.py  mcp_server_research.py  python_repl.py  tavily.py  test_fundamental_av.ipynb  tickertick.py  trading_strategies.py
src/agent/market_intelligence_agent/tools/archive/: fundamental_data_yf.py
src/agent/market_intelligence_agent/tools/mcp_server/: fundamental_data.py  market_data.py  tavily.py  tickertick.py
src/agent/market_intelligence_agent/tools/test_tool/: test_fundamental_fmp.ipynb
src/web/: Dockerfile  README.md  __init__.py  config.py  langgraph_client.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_server.py  schemas.py  security.py  tailwind.config.js  utils.py
src/web/routers/: admin_router.py  auth_router.py  ginzu.py  health.py  history.py  protected_router.py  ui.py  workflow.py
src/web/static/: demo.html  report.html
src/web/static/css/: history.css  index.css  input.css  main.css  output.css  report.css
src/web/static/js/: all-reports.js  history.js  index.js  report.js  session-history.js  settings.js
src/web/templates/: all-reports.html  ginzu.html  history.html  index.html  index_original.html  login.html  register.html  report.html  session_history.html  settings.html
src/web/templates/admin/: admin_dashboard.html  dashboard.html  manage_reports.html  manage_users.html
test/: test_metrics.py
(+124 files in other folders)
