[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LangAlpha"
version = "0.1.0"
description = "LangAlpha"
requires-python = ">=3.11"
authors = [
    { name = "Alan Chen", email = "zc2610@nyu.edu" },
]
dependencies = [
    "browser-use>=0.1.45",
    "devtools==0.12.2",
    "dotenv>=0.9.0",
    "python-dotenv>=1.0.1",
    "langchain>=0.3.0",
    "langchain-anthropic==0.3.3",
    "langchain-aws==0.2.19",
    "langchain-azure-dynamic-sessions==0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.49",
    "langchain-deepseek==0.1.3",
    "langchain-experimental==0.3.4",
    "langchain-fireworks==0.2.9",
    "langchain-google-genai==2.1.2",
    "langchain-mcp-adapters>=0.0.9",
    "langchain-ollama==0.3.0",
    "langchain-openai>=0.3.11",
    "langchain-google-vertexai>=2.0.0",
    "langchain-tavily==0.1.5",
    "langchain-text-splitters>=0.3.0",
    "langchain-xai>=0.2.2",
    "langchainhub==0.1.21",
    "langgraph==0.3.27",
    "langgraph-api==0.0.48",
    "langgraph-checkpoint==2.0.24",
    "langgraph-checkpoint-postgres==2.0.19",
    "langgraph-cli==0.1.89",
    "langgraph-prebuilt==0.1.8",
    "langgraph-sdk==0.1.61",
    "langsmith==0.3.21",
    "markdown-it-py==3.0.0",
    "markdownify==1.1.0",
    "mcp==1.6.0",
    "numpy==1.26.4",
    "oauth2client==4.1.3",
    "oauthlib==3.2.2",
    "playwright==1.51.0",
    "polygon-api-client==1.14.4",
    "polygon==1.2.6",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "pydantic_settings==2.8.1",
    "pymysql==1.1.1",
    "requests-futures==1.0.2",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "selenium==4.29.0",
    "torch==2.7.0",
    "tqdm==4.67.1",
    "uv==0.6.16",
    "wrds==3.3.0",
    "yahooquery==2.3.7",
]

[project.optional-dependencies]
dev = [
    # Add development dependencies here if needed
]

[tool.setuptools]
# Add package discovery settings if needed
# package-dir = {"" = "src"}
# packages = find:
#   where = src

[tool.uv]
# Add uv specific configurations if any 