[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langalpha_web"
version = "0.1.0"
description = "FastAPI web interface for LangAlpha."

dependencies = [
    "fastapi>=0.100.0",
    "dotenv",  # Consider consolidating with python-dotenv later
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langgraph-sdk>=0.1.61",
    "python-dotenv>=1.0.0",
    "pymongo>=4.3.0",
    "jinja2>=3.0.0"
]

[tool.setuptools.packages.find]
where = ["."] # Tells setuptools to look for packages in the current directory 